page accueil finie

--- a/francaise.html
+++ b/francaise.html
@@ -15,13 +15,34 @@
 	</head>
 	<body>
 		<header>
-			
+			<div class="menu">
+				<a href="index.html">
+					<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" class="svg-inline--fa fa-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M447.1 256C447.1 273.7 433.7 288 416 288H109.3l105.4 105.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448s-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L109.3 224H416C433.7 224 447.1 238.3 447.1 256z"></path></svg>
+				</a>
+				<div>
+					<img src="./picture/ohmyfood.png" alt="logo">
+				</div>
+			</div>	
 		</header>
 		<section>
 			
 		</section>
-		<footer>
-			
+		<footer>			
+			<img class="footerlogo" src="./picture/ohmyfood@2x.svg" alt="logo">			
+			<div class="footertexte">
+				<div class="footeroutils">
+					<div class="footeroutils__i"><i class="fas fa-utensils fa-lg"></i></div>
+					<h4 class="footeroutils__h4">Proposer un restaurant</h4>
+				</div>
+				<div class="footeroutils">
+					<div class="footeroutils__i footeroutils__i__main"><i class="fas fa-hands-helping fa-lg"></i></i></div>
+					<h4 class="footeroutils__h4">Devenir Partenaire</h4>
+				</div>
+				<div class="footerlegal">
+					<p class="footerlegal__p">Mentions légales</p>
+					<a class="footerlegal__mail" href="mailto: exemple@email.com">Contact</a>
+				</div>
+			</div>			
 		</footer>		
 	</body>
 </html>
