--- a/gout.html
+++ b/gout.html
@@ -24,9 +24,57 @@
 				</div>
 			</div>	
 		</header>
-		<section>
-			
-		</section>
+		<main>
+			<section class="background">
+				<img class="bottom__page" src="picture/gout.webp" alt="La palette du goût">			
+				<div class="pagemaintitre">
+					<h1 class="pagemenu__h1">La palette du goût</h1>
+					<i class="fa-heart__page far fa-heart fa-2x"></i>
+				</div>
+				<div class="pagemenu">
+					<div class="entree">
+						<div class="entree__titre">
+							<h2 class="h2__page">Entrées</h2>
+							<hr>
+						</div>
+						<div class="entree__menu">
+							<div class="containermenu">
+								<div class="menudetail">							
+									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<p class="menudetail__p">
+									Au piment d'espelette <span class="menudetail__prix">25€</span>	
+									</p>
+								</div>
+								<div class="menucoche">
+									<i class="iconemenu fas fa-check-circle"></i>
+								</div>
+							</div>		
+						</div>				
+					</div>
+					<div class="plat">
+						<div class="plat__titre">
+							<h2 class="h2__page">Plats</h2>
+							<hr>
+						</div>
+						<div class="plat__menu">
+							
+						</div>
+					</div>
+					<div class="dessert">
+						<div class="dessert__titre">
+							<h2 class="h2__page">Desserts</h2>
+							<hr>
+						</div>
+						<div class="dessert__menu">
+							
+						</div>			
+					</div>
+					<div class="button button__page">
+						<p>Commander</p>
+					</div>
+				</div>
+			</section>				
+		</main>
 		<footer>			
 			<img class="footerlogo" src="./picture/ohmyfood@2x.svg" alt="logo">			
 			<div class="footertexte">
