--- a/gout.html
+++ b/gout.html
@@ -41,12 +41,43 @@
 							<div class="containermenu">
 								<div class="menudetail">							
 									<h4 class="h4__page">Fricassée d'escargot</h4>
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">25€</span>	
-									</p>
+									<div class="menudetail__p">
+										<p>piment d'espelette</p>
+										<div class="menudetail__prix">
+											<p>25€</p>
+										</div>								
+									</div>																		
 								</div>
 								<div class="menucoche">
-									<i class="iconemenu fas fa-check-circle"></i>
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+							<div class="containermenu">
+								<div class="menudetail">							
+									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<div class="menudetail__p">
+										<p>piment d'espelette</p>
+										<div class="menudetail__prix">
+											<p>25€</p>
+										</div>								
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+							<div class="containermenu">
+								<div class="menudetail">							
+									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<div class="menudetail__p">
+										<p>piment d'espelette</p>
+										<div class="menudetail__prix">
+											<p>25€</p>
+										</div>								
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>		
 						</div>				
@@ -57,7 +88,48 @@
 							<hr>
 						</div>
 						<div class="plat__menu">
-							
+							<div class="containermenu">
+								<div class="menudetail">							
+									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<div class="menudetail__p">
+										<p>piment d'espelette</p>
+										<div class="menudetail__prix">
+											<p>25€</p>
+										</div>								
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+							<div class="containermenu">
+								<div class="menudetail">							
+									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<div class="menudetail__p">
+										<p>piment d'espelette</p>
+										<div class="menudetail__prix">
+											<p>25€</p>
+										</div>								
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+							<div class="containermenu">
+								<div class="menudetail">							
+									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<div class="menudetail__p">
+										<p>piment d'espelette</p>
+										<div class="menudetail__prix">
+											<p>25€</p>
+										</div>								
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>							
 						</div>
 					</div>
 					<div class="dessert">
@@ -66,7 +138,48 @@
 							<hr>
 						</div>
 						<div class="dessert__menu">
-							
+							<div class="containermenu">
+								<div class="menudetail">							
+									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<div class="menudetail__p">
+										<p>piment d'espelette</p>
+										<div class="menudetail__prix">
+											<p>25€</p>
+										</div>								
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+							<div class="containermenu">
+								<div class="menudetail">							
+									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<div class="menudetail__p">
+										<p>piment d'espelette</p>
+										<div class="menudetail__prix">
+											<p>25€</p>
+										</div>								
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+							<div class="containermenu">
+								<div class="menudetail">							
+									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<div class="menudetail__p">
+										<p>piment d'espelette</p>
+										<div class="menudetail__prix">
+											<p>25€</p>
+										</div>								
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>							
 						</div>			
 					</div>
 					<div class="button button__page">
