--- a/gout.html
+++ b/gout.html
@@ -38,48 +38,38 @@
 							<hr>
 						</div>
 						<div class="entree__menu">
-							<div class="containermenu">
+							<div class="containermenu containermenu--1">
 								<div class="menudetail">							
 									<h4 class="h4__page">Fricassée d'escargot</h4>
 									<div class="menudetail__p">
-										<p>piment d'espelette</p>
-										<div class="menudetail__prix">
-											<p>25€</p>
-										</div>								
+										<p class="menudetail__detail">Au piment d'espelette avec un truc dans</p>
+										<p class="menudetail__prix">25€</p>					
 									</div>																		
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="containermenu">
+							<div class="containermenu containermenu--2">
 								<div class="menudetail">							
-									<h4 class="h4__page">Fricassée d'escargot</h4>
-									<div class="menudetail__p">
-										<p>piment d'espelette</p>
-										<div class="menudetail__prix">
-											<p>25€</p>
-										</div>								
-									</div>																		
+									<h4 class="h4__page">Foie gras de canard mi-cuit avec un</h4>
+									<p class="menudetail__p">Et ses copeaux de truffe noire avec un truc<span class="menudetail__prix">20€</span></p>
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="containermenu">
+							<div class="containermenu containermenu--3">
 								<div class="menudetail">							
-									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<h4 class="h4__page">Oeuf au plat</h4>
 									<div class="menudetail__p">
-										<p>piment d'espelette</p>
-										<div class="menudetail__prix">
-											<p>25€</p>
-										</div>								
+										<p>Assaisonné à la truffe sur lit de caviar<span class="prix">20€</span></p>										
 									</div>																		
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
 								</div>
-							</div>		
+							</div>									
 						</div>				
 					</div>
 					<div class="plat">
@@ -88,48 +78,46 @@
 							<hr>
 						</div>
 						<div class="plat__menu">
-							<div class="containermenu">
+							<div class="containermenu containermenu--4">
 								<div class="menudetail">							
-									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<h4 class="h4__page">Filet de boeuf aux herbes</h4>
 									<div class="menudetail__p">
-										<p>piment d'espelette</p>
+										<p>Accompagné de sa ribambelle de légumes</p>
 										<div class="menudetail__prix">
-											<p>25€</p>
+											<p>40€</p>
 										</div>								
 									</div>																		
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
 								</div>
-							</div>
-							<div class="containermenu">
+							</div><div class="containermenu containermenu--5">
 								<div class="menudetail">							
-									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<h4 class="h4__page">Parmentier de queue de boeuf</h4>
 									<div class="menudetail__p">
-										<p>piment d'espelette</p>
+										<p>À la truffe noire sur sa purée de panais</p>
 										<div class="menudetail__prix">
-											<p>25€</p>
+											<p>35€</p>
 										</div>								
 									</div>																		
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
 								</div>
-							</div>
-							<div class="containermenu">
+							</div><div class="containermenu containermenu--6">
 								<div class="menudetail">							
-									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<h4 class="h4__page">Filet de turbot</h4>
 									<div class="menudetail__p">
-										<p>piment d'espelette</p>
+										<p>Aux agrumes</p>
 										<div class="menudetail__prix">
-											<p>25€</p>
+											<p>44€</p>
 										</div>								
 									</div>																		
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
 								</div>
-							</div>							
+							</div>														
 						</div>
 					</div>
 					<div class="dessert">
@@ -138,13 +126,13 @@
 							<hr>
 						</div>
 						<div class="dessert__menu">
-							<div class="containermenu">
+							<div class="containermenu containermenu--7">
 								<div class="menudetail">							
-									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<h4 class="h4__page">Paris-Brest</h4>
 									<div class="menudetail__p">
-										<p>piment d'espelette</p>
+										<p>Revisité</p>
 										<div class="menudetail__prix">
-											<p>25€</p>
+											<p>18€</p>
 										</div>								
 									</div>																		
 								</div>
@@ -152,13 +140,13 @@
 									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="containermenu">
+							<div class="containermenu containermenu--8">
 								<div class="menudetail">							
-									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<h4 class="h4__page">Macaron au chocolat d'exception</h4>
 									<div class="menudetail__p">
-										<p>piment d'espelette</p>
+										<p>Et glace à la vanille de Madagascar</p>
 										<div class="menudetail__prix">
-											<p>25€</p>
+											<p>22€</p>
 										</div>								
 									</div>																		
 								</div>
@@ -166,20 +154,20 @@
 									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="containermenu">
+							<div class="containermenu containermenu--9">
 								<div class="menudetail">							
-									<h4 class="h4__page">Fricassée d'escargot</h4>
+									<h4 class="h4__page">Mousse au chocolat</h4>
 									<div class="menudetail__p">
-										<p>piment d'espelette</p>
+										<p>Au piment d'Espelette et à la truffe noire</p>
 										<div class="menudetail__prix">
-											<p>25€</p>
+											<p>23€</p>
 										</div>								
 									</div>																		
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
 								</div>
-							</div>							
+							</div>														
 						</div>			
 					</div>
 					<div class="button button__page">
