mise en place des intitulés des plats

--- a/francaise.html
+++ b/francaise.html
@@ -38,30 +38,42 @@
 							<hr>
 						</div>
 						<div class="entree__menu">
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">25€</span>	
-									</p>
+							<div class="containermenu containermenu--1">
+								<div class="menudetail">							
+									<h4 class="h4__page">Tartare de poulpe acidulé</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Aux zestes d'orange</p>
+										<p class="menudetail__prix">25€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">35€</span>	
-									</p>
+							<div class="containermenu containermenu--2">
+								<div class="menudetail">							
+									<h4 class="h4__page">Velouté de légumes d'antan</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Carotte, panais, topinambour</p>
+										<p class="menudetail__prix">35€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">20€</span>	
-									</p>
+							<div class="containermenu containermenu--3">
+								<div class="menudetail">							
+									<h4 class="h4__page">Soupe à l'oignon</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Revisitée</p>
+										<p class="menudetail__prix">20€</p>					
+									</div>																		
 								</div>
-							</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>																
 						</div>				
 					</div>
 					<div class="plat">
@@ -70,30 +82,42 @@
 							<hr>
 						</div>
 						<div class="plat__menu">
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">25€</span>	
-									</p>
+							<div class="containermenu containermenu--4">
+								<div class="menudetail">							
+									<h4 class="h4__page">Coquilles Saint-Jacques</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Accompagnées d'une purée de panais</p>
+										<p class="menudetail__prix">40€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">35€</span>	
-									</p>
+							<div class="containermenu containermenu--5">
+								<div class="menudetail">							
+									<h4 class="h4__page">Magret de canard</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Et parmentier de pommes de terre</p>
+										<p class="menudetail__prix">35€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">20€</span>	
-									</p>
+							<div class="containermenu containermenu--6">
+								<div class="menudetail">							
+									<h4 class="h4__page">Pigeonneau d’Ille-et-Vilaine</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Sur son lit de gnocchis aux légumes</p>
+										<p class="menudetail__prix">44€</p>					
+									</div>																		
 								</div>
-							</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>																				
 						</div>
 					</div>
 					<div class="dessert">
@@ -102,30 +126,43 @@
 							<hr>
 						</div>
 						<div class="dessert__menu">
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">25€</span>	
-									</p>
+							<div class="containermenu containermenu--7">
+								<div class="menudetail">							
+									<h4 class="h4__page">Pétales de violettes glacés</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Et purée de noisettes</p>
+										<p class="menudetail__prix">18€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">35€</span>	
-									</p>
+							<div class="containermenu containermenu--8">
+								<div class="menudetail">							
+									<h4 class="h4__page">Fondant au chocolat</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Revisité</p>
+										<p class="menudetail__prix">22€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">20€</span>	
-									</p>
+							<div class="containermenu containermenu--9">
+								<div class="menudetail">							
+									<h4 class="h4__page">Millefeuille croustillant</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Myrtilles et pâte d’amande</p>
+										<p class="menudetail__prix">23€</p>					
+									</div>																		
 								</div>
-							</div>	
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>							
+							</div>														
 						</div>			
 					</div>
 					<div class="button button__page">
