--- a/gout.html
+++ b/gout.html
@@ -42,7 +42,7 @@
 								<div class="menudetail">							
 									<h4 class="h4__page">Fricassée d'escargot</h4>
 									<div class="menudetail__p">
-										<p class="menudetail__detail">Au piment d'espelette avec un truc dans</p>
+										<p class="menudetail__detail">Au piment d'espelette</p>
 										<p class="menudetail__prix">25€</p>					
 									</div>																		
 								</div>
@@ -52,8 +52,11 @@
 							</div>
 							<div class="containermenu containermenu--2">
 								<div class="menudetail">							
-									<h4 class="h4__page">Foie gras de canard mi-cuit avec un</h4>
-									<p class="menudetail__p">Et ses copeaux de truffe noire avec un truc<span class="menudetail__prix">20€</span></p>
+									<h4 class="h4__page">Foie gras de canard mi-cuit</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Et ses copeaux de truffe noire</p>
+										<p class="menudetail__prix">35€</p>					
+									</div>																		
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
@@ -63,13 +66,14 @@
 								<div class="menudetail">							
 									<h4 class="h4__page">Oeuf au plat</h4>
 									<div class="menudetail__p">
-										<p>Assaisonné à la truffe sur lit de caviar<span class="prix">20€</span></p>										
+										<p class="menudetail__detail">Assaisonné à la truffe sur lit de caviar</p>
+										<p class="menudetail__prix">20€</p>					
 									</div>																		
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
 								</div>
-							</div>									
+							</div>																
 						</div>				
 					</div>
 					<div class="plat">
@@ -82,42 +86,38 @@
 								<div class="menudetail">							
 									<h4 class="h4__page">Filet de boeuf aux herbes</h4>
 									<div class="menudetail__p">
-										<p>Accompagné de sa ribambelle de légumes</p>
-										<div class="menudetail__prix">
-											<p>40€</p>
-										</div>								
+										<p class="menudetail__detail">Accompagné de sa ribambelle de légumes</p>
+										<p class="menudetail__prix">40€</p>					
 									</div>																		
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
 								</div>
-							</div><div class="containermenu containermenu--5">
+							</div>
+							<div class="containermenu containermenu--5">
 								<div class="menudetail">							
 									<h4 class="h4__page">Parmentier de queue de boeuf</h4>
 									<div class="menudetail__p">
-										<p>À la truffe noire sur sa purée de panais</p>
-										<div class="menudetail__prix">
-											<p>35€</p>
-										</div>								
+										<p class="menudetail__detail">À la truffe noire sur sa purée de panais</p>
+										<p class="menudetail__prix">35€</p>					
 									</div>																		
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
 								</div>
-							</div><div class="containermenu containermenu--6">
+							</div>
+							<div class="containermenu containermenu--6">
 								<div class="menudetail">							
 									<h4 class="h4__page">Filet de turbot</h4>
 									<div class="menudetail__p">
-										<p>Aux agrumes</p>
-										<div class="menudetail__prix">
-											<p>44€</p>
-										</div>								
+										<p class="menudetail__detail">Aux agrumes</p>
+										<p class="menudetail__prix">44€</p>					
 									</div>																		
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
 								</div>
-							</div>														
+							</div>																				
 						</div>
 					</div>
 					<div class="dessert">
@@ -130,10 +130,8 @@
 								<div class="menudetail">							
 									<h4 class="h4__page">Paris-Brest</h4>
 									<div class="menudetail__p">
-										<p>Revisité</p>
-										<div class="menudetail__prix">
-											<p>18€</p>
-										</div>								
+										<p class="menudetail__detail">Revisité</p>
+										<p class="menudetail__prix">18€</p>					
 									</div>																		
 								</div>
 								<div class="menucoche">
@@ -144,10 +142,8 @@
 								<div class="menudetail">							
 									<h4 class="h4__page">Macaron au chocolat d'exception</h4>
 									<div class="menudetail__p">
-										<p>Et glace à la vanille de Madagascar</p>
-										<div class="menudetail__prix">
-											<p>22€</p>
-										</div>								
+										<p class="menudetail__detail">Et glace à la vanille de Madagascar</p>
+										<p class="menudetail__prix">22€</p>					
 									</div>																		
 								</div>
 								<div class="menucoche">
@@ -158,15 +154,14 @@
 								<div class="menudetail">							
 									<h4 class="h4__page">Mousse au chocolat</h4>
 									<div class="menudetail__p">
-										<p>Au piment d'Espelette et à la truffe noire</p>
-										<div class="menudetail__prix">
-											<p>23€</p>
-										</div>								
+										<p class="menudetail__detail">Au piment d'Espelette et à la truffe noire</p>
+										<p class="menudetail__prix">23€</p>					
 									</div>																		
 								</div>
 								<div class="menucoche">
 									<i class="fas fa-check-circle"></i>
 								</div>
+							</div>							
 							</div>														
 						</div>			
 					</div>
