--- a/note.html
+++ b/note.html
@@ -38,38 +38,54 @@
 							<hr>
 						</div>
 						<div class="entree__menu">
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">25€</span>	
-									</p>
+							<div class="containermenu containermenu--1">
+								<div class="menudetail">							
+									<h4 class="h4__page">Ravioles de foie gras</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Accompagnés de leur crème à la truffe</p>
+										<p class="menudetail__prix">25€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">25€</span>	
-									</p>
+							<div class="containermenu containermenu--2">
+								<div class="menudetail">							
+									<h4 class="h4__page">Caviar osciètre</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Sur blini à la farine de blé noir</p>
+										<p class="menudetail__prix">35€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">35€</span>	
-									</p>
+							<div class="containermenu containermenu--3">
+								<div class="menudetail">							
+									<h4 class="h4__page">Homard et espuma de potiron</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Mariné aux zestes d'orange</p>
+										<p class="menudetail__prix">20€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">20€</span>	
-									</p>
+							<div class="containermenu containermenu--4">
+								<div class="menudetail">							
+									<h4 class="h4__page">Foie gras de canard cuit entier</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Confiture de figue et pain toasté</p>
+										<p class="menudetail__prix">35€</p>					
+									</div>																		
 								</div>
-							</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>																
 						</div>				
 					</div>
 					<div class="plat">
@@ -78,30 +94,42 @@
 							<hr>
 						</div>
 						<div class="plat__menu">
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">25€</span>	
-									</p>
+							<div class="containermenu containermenu--5">
+								<div class="menudetail">							
+									<h4 class="h4__page">Noix de coquilles Saint-Jacques</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Sur lit de purée de céleri-rave</p>
+										<p class="menudetail__prix">40€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">35€</span>	
-									</p>
+							<div class="containermenu containermenu--6">
+								<div class="menudetail">							
+									<h4 class="h4__page">Langoustine poêlée</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Purée de patate douce</p>
+										<p class="menudetail__prix">35€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">20€</span>	
-									</p>
+							<div class="containermenu containermenu--7">
+								<div class="menudetail">							
+									<h4 class="h4__page">Mijoté de queue de boeuf</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Et riz sauvage aux zestes de citron</p>
+										<p class="menudetail__prix">44€</p>					
+									</div>																		
 								</div>
-							</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>																				
 						</div>
 					</div>
 					<div class="dessert">
@@ -110,30 +138,43 @@
 							<hr>
 						</div>
 						<div class="dessert__menu">
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">25€</span>	
-									</p>
+							<div class="containermenu containermenu--8">
+								<div class="menudetail">							
+									<h4 class="h4__page">Macaron noisette et chocolat</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Glace au caramel brun et sel de Guérande</p>
+										<p class="menudetail__prix">18€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">35€</span>	
-									</p>
+							<div class="containermenu containermenu--9">
+								<div class="menudetail">							
+									<h4 class="h4__page">Baba au rhum revisité</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Avec son coulis de citron</p>
+										<p class="menudetail__prix">22€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">20€</span>	
-									</p>
+							<div class="containermenu containermenu--10">
+								<div class="menudetail">							
+									<h4 class="h4__page">Tarte au citron meringuée</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Déstructurée</p>
+										<p class="menudetail__prix">23€</p>					
+									</div>																		
 								</div>
-							</div>	
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>							
+							</div>														
 						</div>			
 					</div>
 					<div class="button button__page">
