--- a/sens.html
+++ b/sens.html
@@ -38,30 +38,42 @@
 							<hr>
 						</div>
 						<div class="entree__menu">
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">25€</span>	
-									</p>
+							<div class="containermenu containermenu--1">
+								<div class="menudetail">							
+									<h4 class="h4__page">Tartare de thon</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Assaisonné au yuzu</p>
+										<p class="menudetail__prix">25€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">35€</span>	
-									</p>
+							<div class="containermenu containermenu--2">
+								<div class="menudetail">							
+									<h4 class="h4__page">Bouchée de homard croustillant</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Et sa farandole de petits légumes</p>
+										<p class="menudetail__prix">35€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">20€</span>	
-									</p>
+							<div class="containermenu containermenu--3">
+								<div class="menudetail">							
+									<h4 class="h4__page">Velouté de cèpes</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Aux truffes</p>
+										<p class="menudetail__prix">20€</p>					
+									</div>																		
 								</div>
-							</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>																
 						</div>				
 					</div>
 					<div class="plat">
@@ -70,30 +82,42 @@
 							<hr>
 						</div>
 						<div class="plat__menu">
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">25€</span>	
-									</p>
+							<div class="containermenu containermenu--4">
+								<div class="menudetail">							
+									<h4 class="h4__page">Poulet rôti aux herbes de Provence</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Et sa crème de truffe</p>
+										<p class="menudetail__prix">40€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">35€</span>	
-									</p>
+							<div class="containermenu containermenu--5">
+								<div class="menudetail">							
+									<h4 class="h4__page">Langouste rôtie</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Et ses légumes de saison</p>
+										<p class="menudetail__prix">35€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">20€</span>	
-									</p>
+							<div class="containermenu containermenu--6">
+								<div class="menudetail">							
+									<h4 class="h4__page">Côte de boeuf Angus</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Et sa purée de panais</p>
+										<p class="menudetail__prix">44€</p>					
+									</div>																		
 								</div>
-							</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>																				
 						</div>
 					</div>
 					<div class="dessert">
@@ -102,30 +126,43 @@
 							<hr>
 						</div>
 						<div class="dessert__menu">
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">25€</span>	
-									</p>
+							<div class="containermenu containermenu--7">
+								<div class="menudetail">							
+									<h4 class="h4__page">Farandole de desserts</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Du chef</p>
+										<p class="menudetail__prix">18€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">35€</span>	
-									</p>
+							<div class="containermenu containermenu--8">
+								<div class="menudetail">							
+									<h4 class="h4__page">Crème brulée</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">Revisitée</p>
+										<p class="menudetail__prix">22€</p>					
+									</div>																		
+								</div>
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
-							<div class="menudetail">							
-								<h4 class="h4__page">Fricassée d'escargot</h4>
-								<div class="menudetail__detail">
-									<p class="menudetail__p">
-									Au piment d'espelette <span class="menudetail__prix">20€</span>	
-									</p>
+							<div class="containermenu containermenu--9">
+								<div class="menudetail">							
+									<h4 class="h4__page">Tiramisu</h4>
+									<div class="menudetail__p">
+										<p class="menudetail__detail">À la noisette</p>
+										<p class="menudetail__prix">23€</p>					
+									</div>																		
 								</div>
-							</div>	
+								<div class="menucoche">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>							
+							</div>														
 						</div>			
 					</div>
 					<div class="button button__page">
