ajustement des boutons à l'infinitif

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					Découvrez des restaurants d'exception, sélectionnés par nos soins.
 				</p>
 				<div class="button">
-					<p>Explorez nos restaurants</p>
+					<p>Explorer nos restaurants</p>
 				</div>
 			</div>
 			<div class="fonction">
