--- a/gout.html
+++ b/gout.html
@@ -42,7 +42,7 @@
 								<div class="menudetail">							
 									<h4 class="h4__page">Fricassée d'escargot</h4>
 									<div class="menudetail__p">
-										<p class="menudetail__detail">Au piment d'espelette</p>
+										<p class="menudetail__detail">Au piment d'Espelette</p>
 										<p class="menudetail__prix">25€</p>					
 									</div>																		
 								</div>
