ajustement des boutons fonction

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				</div>
 				<div class="button__fonction button__fonction--violet">
 					<p class="fonction__chiffre">3</p>
-					<span class="fonction__i--violet"><i class="fas fa-store fa-sm"></i></span>
+					<span class="fonction__i"><i class="fas fa-store fa-sm"></i></span>
 					<p class="fonction__p">Dégustez au restaurant</p>
 				</div>
 			</div>
