--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<img class="top" src="picture/note.webp" alt="La note enchanté">
 						<div class="heart">
 							<div>
-								<h4>La note enchanté</h4>
+								<h4>La note enchantée</h4>
 								<p>Charonne</p>
 							</div>
 							<i class="far fa-heart fa-2x"></i>
