réglage html pour validation w3c

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 				<p class="reservation__p">
 					Découvrez des restaurants d'exception, sélectionnés par nos soins.
 				</p>
-				<div class="button">
-					<p>Explorer nos restaurants</p>
-				</div>
+				<a href="#restos">
+					<div class="button">
+						<p>Explorer nos restaurants</p>
+					</div>
+				</a>
 			</div>
 			<div class="fonction">
 				<h2 class="fonction__h2">
@@ -62,7 +64,7 @@
 		</section>
 		<main>
 			<section class="cards">
-				<h2>Restaurants</h2>
+				<h2 id="restos">Restaurants</h2>
 				<a href="gout.html">
 					<article class="card card__new">
 						<img class="bottom" src="picture/gout.webp" alt="La palette du goût">
@@ -72,6 +74,7 @@
 								<p>Ménilmontant</p>
 							</div>
 							<i class="far fa-heart fa-2x"></i>
+						</div>
 					</article>
 				</a>
 				<a href="note.html">
@@ -83,6 +86,7 @@
 								<p>Charonne</p>
 							</div>
 							<i class="far fa-heart fa-2x"></i>
+						</div>
 					</article>
 				</a>
 				<a href="francaise.html">
@@ -94,6 +98,7 @@
 								<p>Cité Rouge</p>
 							</div>
 							<i class="far fa-heart fa-2x"></i>
+						</div>
 					</article>
 				</a>
 				<a href="sens.html">
@@ -118,12 +123,12 @@
 					<h4 class="footeroutils__h4">Proposer un restaurant</h4>
 				</div>
 				<div class="footeroutils">
-					<div class="footeroutils__i footeroutils__i__main"><i class="fas fa-hands-helping fa-lg"></i></i></div>
+					<div class="footeroutils__i footeroutils__i__main"><i class="fas fa-hands-helping fa-lg"></i></div>
 					<h4 class="footeroutils__h4">Devenir Partenaire</h4>
 				</div>
 				<div class="footerlegal">
 					<p class="footerlegal__p">Mentions légales</p>
-					<a class="footerlegal__mail" href="mailto: exemple@email.com">Contact</a>
+					<a class="footerlegal__mail" href="mailto:exemple@email.com">Contact</a>
 				</div>
 			</div>			
 		</footer>	
