--- a/note.html
+++ b/note.html
@@ -191,12 +191,12 @@
 					<h4 class="footeroutils__h4">Proposer un restaurant</h4>
 				</div>
 				<div class="footeroutils">
-					<div class="footeroutils__i footeroutils__i__main"><i class="fas fa-hands-helping fa-lg"></i></i></div>
+					<div class="footeroutils__i footeroutils__i__main"><i class="fas fa-hands-helping fa-lg"></i>/div>
 					<h4 class="footeroutils__h4">Devenir Partenaire</h4>
 				</div>
 				<div class="footerlegal">
 					<p class="footerlegal__p">Mentions légales</p>
-					<a class="footerlegal__mail" href="mailto: exemple@email.com">Contact</a>
+					<a class="footerlegal__mail" href="mailto:exemple@email.com">Contact</a>
 				</div>
 			</div>			
 		</footer>			
