--- a/index.html
+++ b/index.html
@@ -119,11 +119,15 @@
 			<img class="footerlogo" src="./picture/ohmyfood@2x.svg" alt="logo">			
 			<div class="footertexte">
 				<div class="footeroutils">
-					<div class="footeroutils__i"><i class="fas fa-utensils fa-lg"></i></div>
+					<div class="footeroutils__i">
+						<i class="fas fa-utensils fa-lg"></i>
+					</div>
 					<h4 class="footeroutils__h4">Proposer un restaurant</h4>
 				</div>
 				<div class="footeroutils">
-					<div class="footeroutils__i footeroutils__i__main"><i class="fas fa-hands-helping fa-lg"></i></div>
+					<div class="footeroutils__i footeroutils__i__main">
+						<i class="fas fa-hands-helping fa-lg"></i>
+					</div>
 					<h4 class="footeroutils__h4">Devenir Partenaire</h4>
 				</div>
 				<div class="footerlegal">
